src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>YES2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的正常开机及关机顺序</description>
        <label>是</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YES3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>设备的临床知识介绍</description>
        <label>是</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>engineer11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jsjl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>上级经理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rRCo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>packingList__c</fullName>
        <label>是否有装箱单</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Types__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>是</fullName>
                </value>
                <value>
                    <fullName>否</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>respondingspeed__c</fullName>
        <label>响应速度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sjc__c</fullName>
        <formula>CompleteTime__c - WorkDate__c</formula>
        <label>时间差</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>是否升级</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RequestName__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>engineer__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>全部未处理服务请求(常规）</label>
        <language>zh_CN</language>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>我的个案</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>View111</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Satisfaction__c</field>
            <operation>equals</operation>
            <value>投诉</value>
        </filters>
        <label>投诉</label>
        <sharedTo>
            <group>Group332</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View122</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>RequestName__c</columns>
        <columns>WorkContent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>升迁疑难</value>
        </filters>
        <label>升迁疑难</label>
        <sharedTo>
            <group>Group222</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>RecordType221</fullName>
        <active>true</active>
        <businessProcess>服务流程</businessProcess>
        <label>技术服务</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType22212</fullName>
        <active>true</active>
        <businessProcess>合同机%2F样机安装</businessProcess>
        <label>样机安装</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType223</fullName>
        <active>true</active>
        <businessProcess>合同机%2F样机安装</businessProcess>
        <label>合同安装</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType443</fullName>
        <active>true</active>
        <businessProcess>服务流程</businessProcess>
        <label>维修维护</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType44366</fullName>
        <active>false</active>
        <businessProcess>服务流程</businessProcess>
        <label>技术服务支持</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType551</fullName>
        <active>false</active>
        <businessProcess>服务流程</businessProcess>
        <label>手术室环境评估</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType5522</fullName>
        <active>false</active>
        <businessProcess>服务流程</businessProcess>
        <label>年度保养</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType554</fullName>
        <active>false</active>
        <businessProcess>服务流程</businessProcess>
        <label>备用机服务工作</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType5553</fullName>
        <active>false</active>
        <businessProcess>服务流程</businessProcess>
        <label>故障报修</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>baojiashoufei</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VALUE(text( QuotationFees__c  ))&lt;3,   BJSF__c     =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>BJSF__c</errorDisplayField>
        <errorMessage>满意度调查报价收费小于3分必须填写小于3分的原因！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>beizhubitian</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text( NoAcceptanceReason__c )=&quot;医院特殊原因&quot;, Remarks__c=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Remarks__c</errorDisplayField>
        <errorMessage>当 “未验收原因” 选择为 “医院特殊原因” 时，备注必填！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>chanpinpeixunka</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( SFPXK__c , &quot;是&quot;) &amp;&amp; (WQZW1__c == false || JBZW1__c== false || WZW1__c== false) &amp;&amp;( WQZW2__c == false &amp;&amp; JBZW2__c== false &amp;&amp; WZW2__c== false) &amp;&amp; (WQZW3__c == false &amp;&amp; JBZW3__c== false &amp;&amp; WZW3__c== false ) &amp;&amp;(WQZW4__c == false &amp;&amp; JBZW4__c== false &amp;&amp; WZW4__c== false) &amp;&amp;( WQZW5__c == false &amp;&amp; JBZW5__c== false &amp;&amp; WZW5__c== false) &amp;&amp; (YES7__c== false &amp;&amp; NO7__c== false) &amp;&amp; (YES8__c== false &amp;&amp; NO8__c== false) &amp;&amp; (Chinese__c== false &amp;&amp; English__c== false ) &amp;&amp;(BMY__c == false &amp;&amp; JNMY__c == false || HMY__c == false),true,false)</errorConditionFormula>
        <errorMessage>请填写选项卡</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>fuwutaidu</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VALUE(text( ServiceAttitude__c ))&lt;3,  FWTD__c  =&apos;&apos;)</errorConditionFormula>
        <errorMessage>满意度调查服务态度小于3分必须填写小于3分的原因！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jiedanshijian</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 !ISNEW(), 
   AND( SendTime__c  &gt;   OrderTime__c  ,SendTime__c  &gt;   RequestTime__c ) 
)</errorConditionFormula>
        <errorMessage>接单时间跟到达时间不能早于派单时间</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jiejuexiaolv</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VALUE(text(SolveEfficiency__c  ))&lt;3,   JJXL__c   =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>JJXL__c</errorDisplayField>
        <errorMessage>满意度调查解决效率小于3分必须填写小于3分的原因！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>manyidudiaocha</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VALUE(text(respondingspeed__c ))&lt;3, XYSD__c =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>XYSD__c</errorDisplayField>
        <errorMessage>满意度调查响应速度小于3分必须填写小于3分的原因！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>shifoushengqian</fullName>
        <active>true</active>
        <errorConditionFormula>AND(upgrade__c=TRUE,  ISBLANK(CompletionDate__c), RecordType.Id =&quot;0126F00000175pE &quot; )</errorConditionFormula>
        <errorMessage>如果选择服务升级，必须填写完成日期！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xianchangguifan</fullName>
        <active>true</active>
        <errorConditionFormula>AND(VALUE(text( FieldSpecification__c  ))&lt;3,    XCGF__c    =&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>XCGF__c</errorDisplayField>
        <errorMessage>满意度调查现场规范小于3分必须填写小于3分的原因！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>yanshouyuanyin</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text(AcceptanceResults__c)=&quot;未验收&quot;,text(NoAcceptanceReason__c)=&quot;&quot;)</errorConditionFormula>
        <errorMessage>验收结果为未验收的时候需要填写未验收原因！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>yiyuanteshuyuanyin</fullName>
        <active>true</active>
        <errorConditionFormula>AND(text( NoAcceptanceReason__c )=&quot;医院特殊原因&quot;, Remarks__c =&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Remarks__c</errorDisplayField>
        <errorMessage>未验收原因是医院特殊原因的时候，需要填写备注。</errorMessage>
    </validationRules>
</CustomObject>